--- a/MIB.css
+++ b/MIB.css
@@ -170,7 +170,7 @@ fim css personalizado .dummyclass {
 }
 /* Channels list area */
 
-.channels-wrap {
+.channels-wrap, .container-RYiLUQ {
     background: #1E1E21 !important
 }
 /* Chat area */
